Added advantages, 1200px and 991px adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
 </head>
 
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
-                <a href="#" class="header__logo">
-                    <img src="icons/logo-running-man.png" alt="">
+                <a href="#" class="header__logo-container">
+                    <img src="icons/logo-running-man.png" alt="logo" class="header__logo">
+                    <img src="icons/logo-mobile-running-man.png" alt="logo" class="header__logo_mobile">
                 </a>
                 <div class="header__official">
                     Официальный представитель
@@ -57,12 +58,49 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/01-advantages-cup.png" alt="cup" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Делимся опытом
+                    </div>
+                    <div class="advantages__description">
+                        Наши сотрудники всегда готовы поделиться своим опытом,
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/02-advantages-heart.png" alt="heart" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="advantages__description">
+                        Мы работаем для того,
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/03-advantages-shoe.png" alt="shoe" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__description">
+                        Помогаем с обучением <br>
+                        правильной технике бега! <br>
+                        Дружим с крупнейшей школой бега в России -
+                        <a href="#">I LOVE RUNNING.</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
-    </div>
-
-    <section class="">
-
     </section>
 
     <footer class="">
