--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <header class="header">
                 <a href="#" class="header__logo-container">
                     <img src="icons/logo-running-man.png" alt="logo" class="header__logo">
-                    <img src="icons/logo-mobile-running-man.png" alt="logo" class="header__logo_mobile">
+                    <img src="icons/logo-mobile-running-man.png" alt="logo" class="header__logo header__logo_mobile">
                 </a>
                 <div class="header__official">
                     Официальный представитель
@@ -103,6 +103,25 @@
         </div>
     </section>
 
+    <section class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию
+                по подбору пульсометра
+            </h2>
+            <div class="consultation__description">
+                Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя " type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </section>
     <footer class="">
 
     </footer>
