--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -122,10 +123,30 @@
             </form>
         </div>
     </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/01-product.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/02-product.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/03-product.jpg" alt="slide">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="">
 
     </footer>
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
